# spdlog-issue-1732

./: .gitignore  CMakeLists.txt  README.md  main.cpp
